--- a/help.html
+++ b/help.html
@@ -61,6 +61,7 @@
   </nav>
   <main>
     <header>
+      <img class="header-logo" src="./assets/img/Join Logo.svg" alt="Join Logo">
       <div class="center">
         <p class="app-tagline">Kanban Project Management Tool</p>
       </div>
