--- a/signup.html
+++ b/signup.html
@@ -45,8 +45,10 @@
           <div class="input-field">
             <input class="input-focus" type="password" id="registerPassword" placeholder="Password">
             <img src="./assets/icons/lock.svg" alt="" id="registerLockIcon">
-            <img src="./assets/icons/visibility_off.svg" alt="" id="registerVisibilityOffIcon" class="is-hidden password-toggle">
-            <img src="./assets/icons/visibility.svg" alt="" id="registerVisibilityIcon" class="is-hidden password-toggle">
+            <img src="./assets/icons/visibility_off.svg" alt="" id="registerVisibilityOffIcon"
+              class="is-hidden password-toggle">
+            <img src="./assets/icons/visibility.svg" alt="" id="registerVisibilityIcon"
+              class="is-hidden password-toggle">
           </div>
           <span class="error-message" id="registerPasswordError"></span>
         </div>
@@ -55,8 +57,10 @@
           <div class="input-field">
             <input class="input-focus" type="password" id="registerPasswordConfirm" placeholder="Confirm Password">
             <img src="./assets/icons/lock.svg" alt="" id="registerConfirmLockIcon">
-            <img src="./assets/icons/visibility_off.svg" alt="" id="registerConfirmVisibilityOffIcon" class="is-hidden password-toggle">
-            <img src="./assets/icons/visibility.svg" alt="" id="registerConfirmVisibilityIcon" class="is-hidden password-toggle">
+            <img src="./assets/icons/visibility_off.svg" alt="" id="registerConfirmVisibilityOffIcon"
+              class="is-hidden password-toggle">
+            <img src="./assets/icons/visibility.svg" alt="" id="registerConfirmVisibilityIcon"
+              class="is-hidden password-toggle">
           </div>
           <span class="error-message" id="registerPasswordConfirmError"></span>
         </div>
@@ -64,7 +68,8 @@
         <div class="privacy-wrapper">
           <div class="accept-privacy-policy">
             <input type="checkbox" class="accept-privacy" id="acceptPrivacy">
-            <div><span class="checkbox-text">I accept the </span><a href="./public/privacy-policy.html">Privacy Policy</a>
+            <div><span class="checkbox-text">I accept the </span><a href="./public/privacy-policy.html">Privacy
+                Policy</a>
             </div>
           </div>
           <span class="error-message" id="acceptPrivacyError"></span>
