--- a/help.html
+++ b/help.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./styles/legal-notice.css">
+  <link rel="stylesheet" href="./styles/help.css">
   <link rel="stylesheet" href="./styles/sidebar.css">
   <link rel="stylesheet" href="./styles/header.css">
 
@@ -93,7 +94,75 @@
 
 
     <div class="wrapper">
-      <p>Help</p>
+      <div class="help-page-header">
+        <h1>Help</h1>
+        <img src="./assets/img/arrow-left-line.svg" alt="Back" class="help-back-btn"
+          onclick="history.back(); return false;">
+      </div>
+      <p class="help-page-description">Welcome to the help page for <span class="blue-text">Join</span>, your guide to
+        using our kanban project
+        management tool. Here, we'll provide an overview of what <span class="blue-text">Join</span> is, how it can
+        benefit you, and how to use it.</p>
+      <h2>What is Join?</h2>
+      <p><span class="blue-text">Join</span> is a kanban-based project management tool designed and built by a group of dedicated students as part of
+        their web development bootcamp at the Developer Akademie.</p>
+
+        <p>Kanban, a Japanese term meaning "billboard", is a highly effective method to visualize work, limit
+        work-in-progress, and maximize efficiency (or flow). <span class="blue-text">Join</span> leverages the principles of kanban to help users
+        manage their tasks and projects in an intuitive, visual interface.</p>
+
+        <p>It is important to note that <span class="blue-text">Join</span> is designed as an educational exercise and is not intended for extensive
+        business usage. While we strive to ensure the best possible user experience, we cannot guarantee consistent
+        availability, reliability, accuracy, or other aspects of quality regarding <span class="blue-text">Join</span>.</p>
+        <h2>How to use it</h2>
+
+        <p class="help-steps-intro">Here is a step-by-step guide on how to use <span class="blue-text">Join</span>:</p>
+
+        <div class="help-steps">
+          <div class="help-step">
+            <div class="help-step-number">1.</div>
+            <div class="help-step-content">
+              <div class="help-step-title">Exploring the Board</div>
+              <p>When you log in to <span class="blue-text">Join</span>, you'll find a default board. This board represents your project and contains four default lists: "To Do", "In Progress", "Await feedback" and "Done".</p>
+            </div>
+          </div>
+
+          <div class="help-step">
+            <div class="help-step-number">2.</div>
+            <div class="help-step-content">
+              <div class="help-step-title">Creating Contacts</div>
+              <p>In <span class="blue-text">Join</span>, you can add contacts to collaborate on your projects. Go to the "Contacts" section, click on "New contact", and fill in the required information. Once added, these contacts can be assigned tasks and they can interact with the tasks on the board.</p>
+            </div>
+          </div>
+
+          <div class="help-step">
+            <div class="help-step-number">3.</div>
+            <div class="help-step-content">
+              <div class="help-step-title">Adding Cards</div>
+              <p>Now that you've added your contacts, you can start adding cards. Cards represent individual tasks. Click the "+" button under the appropriate list to create a new card. Fill in the task details in the card, like task name, description, due date, assignees, etc.</p>
+            </div>
+          </div>
+
+          <div class="help-step">
+            <div class="help-step-number">4.</div>
+            <div class="help-step-content">
+              <div class="help-step-title">Moving Cards</div>
+              <p>As the task moves from one stage to another, you can reflect that on the board by dragging and dropping the card from one list to another.</p>
+            </div>
+          </div>
+
+          <div class="help-step">
+            <div class="help-step-number">5.</div>
+            <div class="help-step-content">
+              <div class="help-step-title">Deleting Cards</div>
+              <p>Once a task is completed, you can either move it to the "Done" list or delete it. Deleting a card will permanently remove it from the board. Please exercise caution when deleting cards, as this action is irreversible.</p>
+            </div>
+          </div>
+        </div>
+
+        <p class="help-steps-footer">Remember that using <span class="blue-text">Join</span> effectively requires consistent updates from you and your team to ensure the board reflects the current state of your project.</p>
+        <p class="help-steps-footer">Have more questions about <span class="blue-text">Join</span>? Feel free to contact us at [Your Contact Email]. We're here to help you!</p>
+        <h2>Enjoy using Join!</h2>
     </div>
 
   </main>
